# IAM-Optimization

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
data/sample/: access_requests.csv  assignments.csv  entitlements.csv  exceptions.csv  users.csv
src/iam_opt/: __init__.py  certification.py  cli.py  compliance.py  dashboard.py  models.py  workflows.py
src/iam_opt/connectors/: sailpoint.py
tests/: test_import.py
