
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-opt"
version = "0.1.0"
description = "Identity & Access Management optimization toolkit: automated certifications, workflow docs, and compliance dashboards (ISO 27001 / NIST)."
authors = [{name="Waseea Baheen", email="Waseea.baheen@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "pydantic>=2.6",
  "typer>=0.12",
  "jinja2>=3.1",
  "matplotlib>=3.8"
]

[project.scripts]
iam-opt = "iam_opt.cli:app"
